fix: implement overflow-y game support for small screen height

--- a/sass/components/_player.scss
+++ b/sass/components/_player.scss
@@ -1,23 +1,24 @@
-.player{
+.player {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 9.6rem 0;
-    gap: 1.2rem;
     background-color: var(--color-primary-bg-50);
+    gap: 1.2rem;
+    min-height: fit-content;
 }
 
-.player--active{
+.player--active {
     background-color: var(--color-primary-bg);
 }
 
-.player__global-score{
+.player__global-score {
     font-size: 6rem;
     margin-bottom: auto;
 }
 
-.player__current-score-box{
+.player__current-score-box {
     padding: 2.4rem;
     background-color: var(--color-primary-mark);
     font-weight: bold;
@@ -28,10 +29,10 @@
     border-radius: 1rem;
 }
 
-.player__current-score-title{
+.player__current-score-title {
     text-transform: uppercase;
 }
 
-.player__current-score{
-    font-size: 2rem;
+.player__current-score {
+    font-size: 2.4rem;
 }
